feat: Allow selection of tenant in agency creation view
- revert "the revert" from original commit 7aa4f0f952528c9579bc1bd4f8080ae28fbebfb6