@@ -11,6 +11,8 @@ import de.caritas.cob.agencyservice.api.model.TopicDTO;
 import de.caritas.cob.agencyservice.api.repository.agency.Agency;
 import de.caritas.cob.agencyservice.api.repository.agencytopic.AgencyTopic;
 import java.util.List;
+import java.util.stream.Collectors;
+
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 
@@ -65,7 +67,7 @@ public class AgencyAdminFullResponseDTOBuilder {
       return Lists.newArrayList();
     } else {
       return Splitter.on(",").trimResults()
-          .splitToList(counsellingRelationsAsCommaSeparatedString).stream().map(AgencyAdminResponseDTO.CounsellingRelationsEnum::valueOf).toList();
+          .splitToList(counsellingRelationsAsCommaSeparatedString).stream().map(AgencyAdminResponseDTO.CounsellingRelationsEnum::valueOf).collect(Collectors.toList());
     }
   }
 
@@ -86,7 +88,7 @@ public class AgencyAdminFullResponseDTOBuilder {
   }
 
   private List<TopicDTO> getTopics(List<AgencyTopic> agencyTopics) {
-    return agencyTopics.stream().map(AgencyTopic::getTopicData).toList();
+    return agencyTopics.stream().map(AgencyTopic::getTopicData).collect(Collectors.toList());
   }
 
   private AgencyLinks createAgencyLinks() {
